--- a/saylani-web.css
+++ b/saylani-web.css
@@ -1,6 +1,6 @@
 
 body{
-    width: 100%;
+    min-width: 100%;
     margin: 0px;
     padding: 0px;
 }
@@ -13,8 +13,8 @@ body{
     float: left;
     width: 25%;
     display: inline-block;
-
 }
+
 .header-para{
     text-align: center;
     background-color: #316DC3;
@@ -51,38 +51,30 @@ body{
 
 /* <!--- Header Completed here ---!> */
 
-.main-navigation{
-    width: 100%;
-    background-color: ghostwhite;
-    position: fixed;
-}
 .logo-div{
     width: 100%;
     float: left;
     background-color: #F7F8FA;
-    height: 70px;
-    top: 50px;
-    bottom: 0px;
-    left: 0px;
-    position: fixed;
-    
+    height: 70px;    
+    display: inline-block;
 }
-.logo-div img{
+.saylani-logo{
     width: 30%;
     float: left;
-    
+    text-align: center;
+    display: inline-block;
 }
-.logo-div .saylani-logo{
-    width: 10%;
-    position: relative;
-    left: 280px;
-    top: 8px;
+.saylani-logo img{
+    width: 30%;
+    margin-top: 15px;
+    margin-left: 30px;
+
 }
 
 .nav-bar{
-    float: right;
-    width: 60%;
-    margin: -5px;
+    display: inline-block;
+    width: 70%;
+    text-align: center;
 }
 
 
@@ -109,64 +101,48 @@ li:hover{
 
 .container{
     width: 100%;
-    height: 100%;
 }
 .saylani-pic{
     width: 100%;
-    height:540px;
-    
-
-}
-.saylani-pic1{
-    width: 100%;
-    height: 480px;
-    position: absolute;
-    top: 120px;
-    left: 0px;
-    right: 0px;
+    height: 100%;
     
 }
-.saylani-pic1:hover{
-    opacity: 0;
-    transition: slide 4s ease;
-}    
      
     /* Cover-picture container completed */
 
 .headline-container{
     background-color: white;
-    width: 100%;
+    min-width: 100%;
+    display: inline-block;
+    text-align: center;
 }
 .headline{
 
     background-color: #316DC3;
-    display:table;
-    width: 70%;
-    position: relative;
-    top: 0px;
-    bottom: 0px;
-    right: 0px;
-    left: 280px;
+    display: inline-block;
+    width: 60%;
+    height: 45px;
+    text-align: center;
 }
 
     .headline p {
-        width: 100%;
+        width: 80%;
+        display: inline;
+        text-align: center;
         color: floralwhite;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         animation: smooth 10s linear infinite;
-        display: table;
-
     }
     .headline p span{
         color: greenyellow;
     }
     @keyframes smooth {
-       
-        25% {margin-left: 180px;}
+        
+        25% {margin-left: 180px; ;}
         50% {margin-left: 60px;}
         75% {margin-left: 60px;}
         100% {margin-left:180px;}        
-      }
+    }
 
 
       /* <!-- Here we start the introduction of website --> */
@@ -174,7 +150,6 @@ li:hover{
 .introduction-container{
     background-color: #F7F8FA;
     width: 100%;
-    height: 608px;
     display: block;
     text-align: center;
 }
@@ -202,16 +177,19 @@ li:hover{
 
 .count-container{
     background-color: #316DC3 ;
-    width: 100%;
-    display: inline-block;
+    min-width: 100%;
+    min-height: 300px;
+    justify-content: space-between;
+    display: flex;
     padding: 0px;
     margin: 0px;
+    float: left;
 }
 .daily-dastrakhan{
     display: inline;
     width: 25%;
-    margin: 30px;
     float: left;
+    margin-top: 30px;
     text-align: center;
     line-height: 20px;
 }
@@ -232,8 +210,8 @@ h5 span{
 
 .family-adoption{
     display: inline;
-    width: 20%;
-    margin: 30px;
+    width: 25%;
+    margin-top: 30px;
     float: left;
     text-align: center;
     line-height: 20px;
@@ -253,9 +231,9 @@ h5 span{
 
 .medical{
     display: inline;
-    width: 20%;
-    margin: 30px;
+    width: 25%;
     float: left;
+    margin-top: 30px;
     text-align: center;
     line-height: 20px;
 }
@@ -277,9 +255,9 @@ h5 span{
 
 .education{
     display: inline;
-    width: 20%;
-    margin: 30px;
+    width: 25%;
     float: left;
+    margin-top: 30px;
     text-align: center;
     line-height: 20px;
 }
@@ -417,23 +395,25 @@ h5 span{
     width: 100%;
     float: left;
     background-color: white;
-    min-height: 400px;
-    margin-top: 70px;
+    display: flex;
 
 }
 
 .missions{
-    margin: 10px;
     background-color: white;
     width: 60%;
     float: left;
     text-align: center;
     display: inline-block;
+    margin: 0px;
+    padding: 0px;
 }
-.missions h1{
-    margin-right: 170px;
-    color: #316DC3;
+.missions p{
+    display: inline-block;
+    font-size: 30px;
     text-align: center;
+    width: 100%;
+    color: #316DC3;
     line-height: 10px;
 }
 .missions span{
@@ -445,7 +425,7 @@ h5 span{
     float: right;
     width: 40%;
     height: 100px;
-    margin: 10px;
+    margin: 10px 15px 10px 10px;
     display: inline-block;
     background-color: whitesmoke;
 }
@@ -455,14 +435,14 @@ h5 span{
 }
 .hepatitis h2{
     display: inline;
-    padding: 20px;
+    margin-left: 10px;
     color: #316DC3;
 }
 .housing-society{
     width: 40%;
-    margin: 10px;
+    margin: 10px 15px 10px 10px;
     float: right;
-    display: inline;
+    display: inline-block;
     height: 100px;
     background-color: whitesmoke;
 }
@@ -472,14 +452,14 @@ h5 span{
 }
 .housing-society h2{
     display: inline;
-    padding: 20px;
+    margin-left: 20px;
     color: #316DC3;
 }
 .it-literacy{
     width: 40%;
     float: right;
-    margin: 10px;
-    display: inline;
+    margin: 10px 15px 10px 10px;
+    display: inline-block;
     height: 100px;
     background-color: whitesmoke;
 }
@@ -489,14 +469,14 @@ h5 span{
 }
 .it-literacy h2{
     display: inline;
-    padding: 20px;
+    margin-left: 20px;
     color: #316DC3;
 }
 .tharparkar{
     width: 40%;
     float: right;
-    margin: 10px;
-    display: inline;
+    margin: 10px 15px 10px 10px;
+    display: inline-block;
     height: 100px;
     background-color: whitesmoke;
 }
@@ -506,19 +486,18 @@ h5 span{
 }
 .tharparkar h2{
     display: inline;
-    padding: 20px;
+    margin-left: 20px;
     color: #316DC3;
  }
  .events-container{
-     width: 38%;
+     width: 40%;
      float: left;
      background-color: white;
-     position: relative;
- }
+    }
  
  .events-container span{
      border-bottom: 2px green solid;
- }
+ }  
  .events-container h1{
      color: #316DC3;
      border-bottom: 1px lightgray solid;
@@ -551,14 +530,14 @@ h5 span{
         100% {margin-top: -180px;}        
       }
 
-      .img-gallery-cont{
-        width: 100%;
-        min-width: 100%;
-   
-      }
+    
+
+
       .img-gallery{
+          width: 100%;
+          height: auto;
           text-align: center;
-          
+          display: inline-block;
       }
       .img-gallery h1{
           color: #316DC3;
@@ -582,45 +561,45 @@ h5 span{
 
 .footer-container{
     width: 100%;
-    text-align: center;
     background-color: rgb(37, 39, 46);
     color: white;
-    display: inline-block;
+    display: flex;
+    justify-content: space-around;
 }
-.footer{
-    margin: 40px;
-    width: 80%;
-    text-align: center;
-    padding: 20px;
-    display: inline-block;
-}
-.footer p {
-    color: #bbb;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 14px;
-    text-align: left;
-}
+
 .address{
     width: 40%;
+    text-align: center;
     display: inline-block;
     float: left;
 }
+.address p{
+    color: lightgray;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: left;
+    margin-left: 40px;
+}
+
 .address img{
     width: 20px;
     float: left;
     display: block;
+    margin-left: 30px;
 }
-#global{
+.global{
+    width: 100%;
+    float: left;
     display: inline;
-    position: relative;
-    bottom: 158px;
-    left: 200px;
 }
-#global-para{
+.global p{
+    float: left;
     display: inline;
-    position: relative;
-    bottom: 158px;
-    left: 10px;
+
+}
+.global img{
+    margin: 19px -30px 0px 29px ;
+    float: left;
+    display: inline;
 }
 .useful-links{
     width: 25%;
